tests/baselines/reference/unusedTypeParameterInMethod2(strict=true).errors.txt
unusedTypeParameterInMethod2.ts(2,18): error TS6133: 'Y' is declared but its value is never read.
unusedTypeParameterInMethod2.ts(5,9): error TS2454: Variable 'a' is used before being assigned.
unusedTypeParameterInMethod2.ts(6,9): error TS2454: Variable 'b' is used before being assigned.


==== unusedTypeParameterInMethod2.ts (3 errors) ====
    class A {
        public f1<X, Y, Z>() {
                     ~
!!! error TS6133: 'Y' is declared but its value is never read.
            var a: X;
            var b: Z;
            a;
            ~
!!! error TS2454: Variable 'a' is used before being assigned.
            b;
            ~
!!! error TS2454: Variable 'b' is used before being assigned.
        }
    }